--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ general:
   checkpoint_dir: 'checkpoint'
   train_dir: './data/train'
   batch_size: 1 # data loader is only implemented for case == 1!
-  select: 'model1'
+  select: 'model3'
   test_file: './data/test/example1.mkv'
 
 model1:
@@ -29,5 +29,18 @@ model2:
   img_channels: 3
   seq_len: 16
   lr: 0.001
+  lr_milestones: [7, 12, 15]
+  epochs: 25
+
+model3:
+  name: 'funpos3'
+  class: 'Model3'
+  skip_frames: 2
+  img_width: 32
+  img_height: 32
+  img_channels: 3
+  convlstm_hidden_dim: 64
+  seq_len: 8
+  lr: 0.0001
   lr_milestones: [7, 12, 15]
   epochs: 25
