--- a/Pose/ViTPose/environment.yml
+++ b/Pose/ViTPose/environment.yml
@@ -1,25 +1,33 @@
 name: ViTPose
 channels:
-  - conda-forge
   - esri
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - addict=2.4.0=py39hf3d152e_0
+  - alabaster=0.7.12=py_0
+  - astroid=2.5.8=py39hf3d152e_0
+  - babel=2.10.3=pyhd8ed1ab_0
   - blas=1.0=mkl
   - bottleneck=1.3.5=py39h7deecbd_0
   - brotli=1.0.9=he6710b0_2
+  - brotlipy=0.7.0=py39hb9d737c_1004
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.6.15=ha878542_0
+  - ca-certificates=2022.07.19=h06a4308_0
   - cairo=1.16.0=h19f5f5c_2
-  - certifi=2022.6.15=py39hf3d152e_0
+  - certifi=2022.6.15=py39h06a4308_0
+  - cffi=1.15.0=py39hd667e15_1
+  - charset-normalizer=2.1.0=pyhd8ed1ab_0
   - colorama=0.4.5=py39h06a4308_0
+  - cryptography=35.0.0=py39h95dcef6_2
   - cudatoolkit=11.1.1=h6406543_8
   - cudnn=8.1.0.77=h90431f1_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - cython=0.29.30=py39h6a678d5_0
   - dbus=1.13.18=hb2f20db_0
+  - docutils=0.19=py39hf3d152e_0
   - expat=2.4.4=h295c915_0
   - ffmpeg=4.3.2=hca11adc_0
   - fontconfig=2.13.1=h6c09931_0
@@ -36,12 +44,18 @@ dependencies:
   - harfbuzz=4.3.0=hd55b92a_0
   - hdf5=1.10.6=hb1b8bf9_0
   - icu=58.2=he6710b0_3
+  - idna=3.3=pyhd8ed1ab_0
+  - imagesize=1.4.1=pyhd8ed1ab_0
+  - importlib-metadata=4.11.4=py39hf3d152e_0
   - intel-openmp=2021.4.0=h06a4308_3561
+  - isort=5.10.1=pyhd8ed1ab_0
   - jasper=2.0.14=hd8c5072_2
+  - jinja2=3.1.2=pyhd8ed1ab_1
   - jpeg=9e=h7f8727e_0
   - json_tricks=3.15.5=pyhd8ed1ab_0
   - kiwisolver=1.4.2=py39h295c915_0
   - lame=3.100=h7f98852_1001
+  - lazy-object-proxy=1.7.1=py39hb9d737c_1
   - ld_impl_linux-64=2.38=h1181459_1
   - libdeflate=1.8=h7f8727e_5
   - libffi=3.3=he6710b0_2
@@ -63,8 +77,10 @@ dependencies:
   - libxcb=1.15=h7f8727e_0
   - libxml2=2.9.14=h74e7548_0
   - lz4-c=1.9.3=h295c915_1
+  - markupsafe=2.1.1=py39hb9d737c_1
   - matplotlib=3.5.1=py39h06a4308_1
   - matplotlib-base=3.5.1=py39ha18d171_1
+  - mccabe=0.6.1=py_1
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py39h7f8727e_0
   - mkl_fft=1.3.1=py39hd3c417c_0
@@ -91,10 +107,17 @@ dependencies:
   - pixman=0.40.0=h7f8727e_1
   - py-opencv=4.5.2=py39_8
   - pycocotools=2.0.2=py39hc547734_1
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.12.0=pyhd8ed1ab_0
+  - pylint=2.7.2=py39hf3d152e_0
+  - pynput=1.7.3=py39hf3d152e_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.4=pyhd3eb1b0_0
   - pyqt=5.9.2=py39h2531618_6
+  - pysocks=1.7.1=py39hf3d152e_5
   - python=3.9.12=h12debd9_1
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-xlib=0.28=pyh9f0ad1d_0
   - python_abi=3.9=1_cp39
   - pytorch=1.8.2=py3.9_cuda11.1_cudnn8.0.5_0
   - pytz=2022.1=pyhd8ed1ab_0
@@ -102,25 +125,41 @@ dependencies:
   - qt=5.9.7=h5867ecd_1
   - readline=8.1.2=h7f8727e_1
   - regex=2022.3.15=py39h7f8727e_0
+  - requests=2.28.1=pyhd8ed1ab_0
   - scipy=1.7.3=py39hc147768_0
   - setuptools=61.2.0=py39h06a4308_0
+  - setuptools-lint=0.6.0=pyh9f0ad1d_0
   - sip=4.19.13=py39h295c915_0
   - six=1.16.0=py_0
+  - snowballstemmer=2.2.0=pyhd8ed1ab_0
+  - sphinx=5.1.1=pyh6c4a22f_0
+  - sphinxcontrib-applehelp=1.0.2=py_0
+  - sphinxcontrib-devhelp=1.0.2=py_0
+  - sphinxcontrib-htmlhelp=2.0.0=pyhd8ed1ab_0
+  - sphinxcontrib-jsmath=1.0.1=py_0
+  - sphinxcontrib-qthelp=1.0.3=py_0
+  - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_2
   - sqlite=3.38.5=hc218d9a_0
   - termcolor=1.1.0=py39h06a4308_1
   - terminaltables=3.1.0=py_0
   - timm=0.4.12=pyhd8ed1ab_0
   - tk=8.6.12=h1ccaba5_0
+  - toml=0.10.2=pyhd8ed1ab_0
   - torchvision=0.9.2=py39_cu111
   - tornado=6.1=py39h27cfd23_0
   - typing_extensions=4.1.1=pyh06a4308_0
   - tzdata=2022a=hda174b7_0
+  - urllib3=1.26.11=pyhd8ed1ab_0
   - wheel=0.37.1=pyhd3eb1b0_0
+  - wrapt=1.11.2=py39h07f9747_1
   - x264=1!161.3030=h7f98852_1
   - xz=5.2.5=h7f8727e_1
   - yaml=0.2.5=h7b6447c_0
   - yapf=0.31.0=pyhd3eb1b0_0
+  - zipp=3.8.0=pyhd8ed1ab_0
   - zlib=1.2.12=h7f8727e_2
   - zstd=1.4.9=haebb681_0
   - pip:
+    - opencv-contrib-python==4.6.0.66
     - xtcocotools==1.12
+prefix: /home/arch/miniconda3/envs/ViTPose
