--- a/Keypoints/V1/environment.yaml
+++ b/Keypoints/V1/environment.yaml
@@ -5,102 +5,253 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - albumentations=1.3.0=pyhd8ed1ab_0
+  - alsa-lib=1.2.8=h166bdaf_0
+  - aom=3.5.0=h27087fc_0
   - appdirs=1.4.4=pyhd3eb1b0_0
+  - attr=2.5.1=h166bdaf_1
   - blas=1.0=mkl
+  - blosc=1.21.4=h0f2a231_0
+  - brotli=1.0.9=h166bdaf_8
+  - brotli-bin=1.0.9=h166bdaf_8
   - brotlipy=0.7.0=py311h5eee18b_1002
+  - brunsli=0.1=h9c3ff4c_0
   - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.19.1=hd590300_0
   - ca-certificates=2023.5.7=hbcca054_0
+  - cairo=1.16.0=ha61ee94_1014
   - certifi=2023.5.7=pyhd8ed1ab_0
   - cffi=1.15.1=py311h5eee18b_3
+  - cfitsio=3.470=hb418390_7
+  - charls=2.2.0=h2531618_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.1.3=unix_pyhd8ed1ab_2
+  - cloudpickle=2.2.1=pyhd8ed1ab_0
+  - contourpy=1.0.5=py311hdb19cb5_0
   - cryptography=39.0.1=py311h9ce1e76_0
-  - ffmpeg=4.3=hf484d3e_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - cython=0.29.33=py311h6a678d5_0
+  - cytoolz=0.12.0=py311hd4cff14_1
+  - dask-core=2023.5.1=pyhd8ed1ab_0
+  - dbus=1.13.6=h5008d03_3
+  - expat=2.5.0=hcb278e6_1
+  - ffmpeg=5.1.2=gpl_h8dda1f0_106
+  - fftw=3.3.10=nompi_hf0379b8_106
   - filelock=3.9.0=py311h06a4308_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.39.4=py311h459d7ec_0
+  - freeglut=3.2.2=h9c3ff4c_1
   - freetype=2.12.1=h4a9f257_0
+  - fsspec=2023.5.0=pyh1a96a4e_0
   - future=0.18.3=py311h06a4308_0
+  - gettext=0.21.1=h27087fc_0
   - giflib=5.2.1=h5eee18b_3
+  - glib=2.76.3=hfc55251_0
+  - glib-tools=2.76.3=hfc55251_0
   - gmp=6.2.1=h295c915_3
   - gmpy2=2.1.2=py311hc9b5ff0_0
-  - gnutls=3.6.15=he1e5248_0
+  - gnutls=3.7.8=hf3e180e_0
+  - graphite2=1.3.13=h58526e2_1001
+  - gst-plugins-base=1.21.3=h4243ec0_1
+  - gstreamer=1.21.3=h25f0c4b_1
+  - gstreamer-orc=0.4.33=h166bdaf_0
+  - harfbuzz=6.0.0=h8e241bc_0
+  - hdf5=1.12.2=nompi_h2386368_101
+  - icu=70.1=h27087fc_0
   - idna=3.4=py311h06a4308_0
+  - imagecodecs=2021.8.26=py311hb63acbb_2
+  - imageio=2.28.1=pyh24c5eb1_0
+  - importlib-metadata=6.6.0=pyha770c72_0
+  - importlib_metadata=6.6.0=hd8ed1ab_0
   - intel-openmp=2023.1.0=hdb19cb5_46305
+  - jack=1.9.22=h11f4161_0
+  - jasper=2.0.33=h0ff4b12_1
   - jinja2=3.1.2=py311h06a4308_0
   - joblib=1.2.0=py311h06a4308_0
   - jpeg=9e=h5eee18b_1
+  - jxrlib=1.1=h7f98852_2
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.4=py311h6a678d5_0
+  - krb5=1.20.1=hf9c8cef_0
   - lame=3.100=h7b6447c_0
+  - lazy_loader=0.2=pyhd8ed1ab_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=3.0=h295c915_0
+  - libaec=1.0.6=hcb278e6_1
+  - libblas=3.9.0=1_h86c2bf4_netlib
+  - libbrotlicommon=1.0.9=h166bdaf_8
+  - libbrotlidec=1.0.9=h166bdaf_8
+  - libbrotlienc=1.0.9=h166bdaf_8
+  - libcap=2.66=ha37c62d_0
+  - libcblas=3.9.0=5_h92ddd45_netlib
+  - libclang=15.0.7=default_h7634d5b_2
+  - libclang13=15.0.7=default_h9986a30_2
+  - libcups=2.3.3=h36d4200_3
+  - libcurl=7.87.0=h6312ad2_0
+  - libdb=6.2.32=h9c3ff4c_0
   - libdeflate=1.17=h5eee18b_0
+  - libdrm=2.4.114=h166bdaf_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
+  - libevent=2.1.10=h9b69904_4
+  - libexpat=2.5.0=hcb278e6_1
   - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=11.2.0=h1234567_1
+  - libflac=1.4.2=h27087fc_0
+  - libgcc-ng=12.2.0=h65d4601_19
+  - libgcrypt=1.10.1=h166bdaf_0
   - libgfortran-ng=11.2.0=h00389a5_1
   - libgfortran5=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libiconv=1.16=h7f8727e_2
+  - libglib=2.76.3=hebfc3b9_0
+  - libglu=9.0.0=he1b5a44_1001
+  - libgpg-error=1.46=h620e276_0
+  - libiconv=1.17=h166bdaf_0
   - libidn2=2.3.4=h5eee18b_0
+  - liblapack=3.9.0=5_h92ddd45_netlib
+  - liblapacke=3.9.0=5_h92ddd45_netlib
+  - libllvm15=15.0.7=hadd5161_1
+  - libnghttp2=1.51.0=hdcd2b5c_0
+  - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.21=h043d6bf_0
+  - libopencv=4.7.0=py311ha52ee4f_0
+  - libopus=1.3.1=h7f98852_1
+  - libpciaccess=0.17=h166bdaf_0
   - libpng=1.6.39=h5eee18b_0
-  - libprotobuf=3.20.3=he621ea3_0
-  - libstdcxx-ng=11.2.0=h1234567_1
+  - libpq=15.1=h2baec63_3
+  - libprotobuf=3.21.12=h3eb15da_0
+  - libsndfile=1.2.0=hb75c966_0
+  - libsqlite=3.42.0=h2797004_0
+  - libssh2=1.10.0=haa6b8db_3
+  - libstdcxx-ng=12.2.0=h46fd767_19
+  - libsystemd0=252=h2a991cd_0
   - libtasn1=4.19.0=h5eee18b_0
   - libtiff=4.5.0=h6a678d5_2
+  - libtool=2.4.7=h27087fc_0
+  - libudev1=253=h0b41bf4_0
   - libunistring=0.9.10=h27cfd23_0
-  - libuuid=1.41.5=h5eee18b_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libva=2.18.0=h0b41bf4_0
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libvpx=1.11.0=h9c3ff4c_3
   - libwebp=1.2.4=h11a3e52_1
   - libwebp-base=1.2.4=h5eee18b_1
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.5.0=h79f4944_1
+  - libxml2=2.10.3=hca2bb57_4
+  - libzlib=1.2.13=h166bdaf_4
+  - libzopfli=1.0.3=h9c3ff4c_0
+  - llvm-openmp=14.0.6=h9e868ea_0
+  - locket=1.0.0=pyhd8ed1ab_0
   - lz4-c=1.9.4=h6a678d5_0
   - markupsafe=2.1.1=py311h5eee18b_0
+  - matplotlib-base=3.7.1=py311ha02d727_1
   - mkl=2023.1.0=h6d00ec8_46342
   - mkl-service=2.4.0=py311h5eee18b_1
   - mkl_fft=1.3.6=py311ha02d727_1
   - mkl_random=1.2.2=py311ha02d727_1
   - mpc=1.1.0=h10f8cd9_1
   - mpfr=4.0.2=hb69a4c5_1
+  - mpg123=1.31.3=hcb278e6_0
   - mpmath=1.2.1=py311h06a4308_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.0.32=h14678bc_0
+  - mysql-libs=8.0.32=h54cf53e_0
   - ncurses=6.4=h6a678d5_0
-  - nettle=3.7.3=hbbd107a_1
+  - nettle=3.8.1=hc379101_1
   - networkx=2.8.4=py311h06a4308_1
   - ninja=1.10.2=h06a4308_5
   - ninja-base=1.10.2=hd09550d_5
+  - nspr=4.35=h27087fc_0
+  - nss=3.89=he45b914_0
   - numpy=1.24.3=py311h08b1b3b_1
   - numpy-base=1.24.3=py311hf175353_1
-  - openh264=2.1.1=h4ff587b_0
-  - openssl=1.1.1t=h7f8727e_0
+  - opencv=4.7.0=py311h38be061_0
+  - openh264=2.3.1=hcb278e6_2
+  - openjpeg=2.5.0=hfec8fc6_2
+  - openssl=1.1.1t=h0b41bf4_0
+  - p11-kit=0.24.1=hc5aa10d_0
   - packaging=23.0=py311h06a4308_0
+  - partd=1.4.0=pyhd8ed1ab_0
+  - pcre2=10.40=hc3806b6_0
   - pillow=9.4.0=py311h6a678d5_0
   - pip=23.0.1=py311h06a4308_0
+  - pixman=0.40.0=h36c2ea0_0
   - pooch=1.4.0=pyhd3eb1b0_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pulseaudio=16.1=h4ab2085_1
+  - py-opencv=4.7.0=py311h781c19f_0
+  - pycocotools=2.0.6=py311h4c7f6c3_1
   - pycparser=2.21=pyhd3eb1b0_0
   - pyopenssl=23.0.0=py311h06a4308_0
   - pyparsing=3.0.9=py311h06a4308_0
   - pysocks=1.7.1=py311h06a4308_0
-  - python=3.11.3=h7a1cb2a_0
+  - python=3.11.0=h10a6764_1_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.11=2_cp311
   - pytorch=2.0.1=py3.11_cpu_0
   - pytorch-mutex=1.0=cpu
+  - pywavelets=1.4.1=py311hcb2cf0a_0
   - pyyaml=6.0=py311h5eee18b_1
+  - qt-main=5.15.6=h18908ee_6
+  - qudida=0.0.4=pyhd8ed1ab_0
   - readline=8.2=h5eee18b_0
   - requests=2.29.0=py311h06a4308_0
+  - scikit-image=0.20.0=py311h2872171_1
   - scikit-learn=1.2.2=py311h6a678d5_1
   - scipy=1.10.1=py311h08b1b3b_1
   - setuptools=66.0.0=py311h06a4308_0
   - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.1.10=h9fff704_0
   - sqlite=3.41.2=h5eee18b_0
+  - svt-av1=1.4.1=hcb278e6_0
   - sympy=1.11.1=py311h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - threadpoolctl=2.2.0=pyh0d69192_0
+  - tifffile=2021.4.8=pyhd8ed1ab_0
   - tk=8.6.12=h1ccaba5_0
+  - toolz=0.12.0=pyhd8ed1ab_0
   - torchvision=0.15.2=py311_cpu
   - typing-extensions=4.5.0=py311h06a4308_0
   - typing_extensions=4.5.0=py311h06a4308_0
   - tzdata=2023c=h04d1e81_0
   - urllib3=1.26.15=py311h06a4308_0
   - wheel=0.38.4=py311h06a4308_0
+  - x264=1!164.3095=h166bdaf_2
+  - x265=3.5=h924138e_3
+  - xcb-util=0.4.0=h166bdaf_0
+  - xcb-util-image=0.4.0=h166bdaf_0
+  - xcb-util-keysyms=0.4.0=h166bdaf_0
+  - xcb-util-renderutil=0.3.9=h166bdaf_0
+  - xcb-util-wm=0.4.1=h166bdaf_0
+  - xkeyboard-config=2.38=h0b41bf4_0
+  - xorg-fixesproto=5.0=h7f98852_1002
+  - xorg-inputproto=2.3.2=h7f98852_1002
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.8.4=h0b41bf4_0
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-libxi=1.7.10=h7f98852_0
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.4.2=h5eee18b_0
   - yaml=0.2.5=h7b6447c_0
-  - zlib=1.2.13=h5eee18b_0
+  - zfp=0.5.5=h9c3ff4c_8
+  - zipp=3.15.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h166bdaf_4
   - zstd=1.5.5=hc292b87_0
 prefix: /home/arch/miniconda3/envs/keypoints_v1
