fix tran with docker

--- a/Keypoints/V1/docker-compose.yml
+++ b/Keypoints/V1/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       context: "."
       dockerfile: "Dockerfile"
     container_name: keypoints
-    restart: unless-stopped
+    restart: "no"
     volumes:
       - ".:/app"
       - "cache:/home/user/.cache"
