--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/open-mmlab/mmtracking.git
 [submodule "Keypoints/V1/lib/funscript_toolbox"]
 	path = Keypoints/V1/lib/funscript_toolbox
-	url = https://github.com/michael-mueller-git/funscript-toolbox.git
+	url = git@github.com:michael-mueller-git/funscript-toolbox.git
